@@ -1,25 +1,27 @@
-\$01 &    680x0, 6833x         & \$03 &    M*Core \\
-\$04 &    XGATE                & \$05 &    PowerPC \\
+\$01 &    680x0, 6833x         & \$02 &    ATARI\_VECTOR \\
+\$03 &    M*Core               & \$04 &    XGATE \\
+\$05 &    PowerPC              & \$06 &    XCore \\
 \$09 &    DSP56xxx             & \$11 &    65xx/MELPS-740 \\
 \$12 &    MELPS-4500           & \$13 &    M16 \\
 \$14 &    M16C                 & \$15 &    F$^{2}$MC8L \\
 \$16 &    F$^{2}$MC16L         & \$19 &    65816/MELPS-7700 \\
 \$21 &    MCS-48               & \$25 &    SYM53C8xx \\
-\$29 &    29xxx                & \$2a &    i960 \\
-\$31 &    MCS-51               & \$32 &    ST9 \\
-\$33 &    ST7                  & \$37 &    2650 \\
-\$38 &    1802/1805            & \$39 &    MCS-96/196/296 \\
-\$3a &    8X30x                & \$3b &    AVR \\
-\$3c &    XA                   & \$3f &    4004/4040 \\
-\$41 &    8080/8085            & \$42 &    8086..V35 \\
-\$47 &    TMS320C6x            & \$48 &    TMS9900 \\
-\$49 &    TMS370xxx            & \$4a &    MSP430 \\
-\$4b &    TMS320C54x           & \$4c &    80C166/167 \\
-\$51 &    Z80/180/380          & \$52 &    TLCS-900 \\
-\$53 &    TLCS-90              & \$54 &    TLCS-870 \\
-\$55 &    TLCS-47              & \$56 &    TLCS-9000 \\
-\$59 &    eZ8                  & \$5b &    KCPSM3 \\
-\$5c &    LatticeMico8         & \$5e &    68RS08 \\
+\$27 &    KENBAK               & \$29 &    29xxx \\
+\$2a &    i960                 & \$31 &    MCS-51 \\
+\$32 &    ST9                  & \$33 &    ST7 \\
+\$37 &    2650                 & \$38 &    1802/1805 \\
+\$39 &    MCS-96/196/296       & \$3a &    8X30x \\
+\$3b &    AVR                  & \$3c &    XA \\
+\$3f &    4004/4040            & \$41 &    8080/8085 \\
+\$42 &    8086..V35            & \$47 &    TMS320C6x \\
+\$48 &    TMS9900              & \$49 &    TMS370xxx \\
+\$4a &    MSP430               & \$4b &    TMS320C54x \\
+\$4c &    80C166/167           & \$51 &    Z80/180/380 \\
+\$52 &    TLCS-900             & \$53 &    TLCS-90 \\
+\$54 &    TLCS-870             & \$55 &    TLCS-47 \\
+\$56 &    TLCS-9000            & \$59 &    eZ8 \\
+\$5b &    KCPSM3               & \$5c &    LatticeMico8 \\
+\$5d &    NEX 75xx             & \$5e &    68RS08 \\
 \$5f &    COP4                 & \$60 &    78K2 \\
 \$61 &    6800, 6301, 6811     & \$62 &    6805/HC08 \\
 \$63 &    6809                 & \$64 &    6804 \\
@@ -30,6 +32,4 @@
 \$6d &    SC14xxx              & \$6e &    SC/MP \\
 \$6f &    COP8                 & \$70 &    PIC16C8x \\
 \$71 &    PIC16C5x             & \$72 &    PIC17C4x \\
-\$73 &    TMS-7000             & \$74 &    TMS3201x \\
-\$75 &    TMS320C2x            & \$76 &    TMS320C3x \\
 \hline
