@@ -1,3 +1,5 @@
+\$73 &    TMS-7000             & \$74 &    TMS3201x \\
+\$75 &    TMS320C2x            & \$76 &    TMS320C3x \\
 \$77 &    TMS320C20x/TMS320C5x & \$78 &    ST6 \\
 \$79 &    Z8                   & \$7a &    $\mu$PD78(C)10 \\
 \$7b &    75K0                 & \$7c &    78K0 \\
