@@ -22,7 +22,9 @@
 \tin{$\mu$PD}   & 64K     &   ---   &   ---   &   ---   &   ---   &   ---   &   ---   &   ---  & --- \\
 \tin{78(C)10}   &         &         &         &         &         &         &         &        &     \\
 \hline
-\tin{75xx}      & 1K      & 64      &   ---   &   ---   &   ---   &   ---   &   ---   &   ---  & --- \\
+\tin{7566}      & 1K      & 64      &   ---   &   ---   &   ---   &   ---   &   ---   &   ---  & --- \\
+\hline
+\tin{7508}      & 4K      & 256     &   ---   &   ---   &   ---   &   ---   &    16   &   ---  & --- \\
 \hline
 \tin{75K0}      & 16K     & 4K      &   ---   &   ---   &   ---   &   ---   &   ---   &   ---  & --- \\
 \hline
