@@ -1,0 +1,5 @@
++------------------------- Test Application 75xx_a --------------------------+
+|                                                                            |
+|       This is a (synthetic) test of the 7500 instruction set A             |
+|                                                                            |
++----------------------------------------------------------------------------+
