@@ -1,5 +1,5 @@
-+------------------------- Test Application 75xx ----------------------------+
++------------------------- Test Application 75xx_b --------------------------+
 |                                                                            |
-|       This is a (synthetic) test of the 75xx instruction set               |
+|       This is a (synthetic) test of the 7500 instruction set B             |
 |                                                                            |
 +----------------------------------------------------------------------------+
